--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,12 @@
   <script src="https://developer.api.autodesk.com/modelderivative/v2/viewers/viewer3D.min.js?v=v6.0"></script>
   <!-- this project files -->
   <link href="css/main.css" rel="stylesheet" />
-  <script src="js/ForgeTree.js"></script>
+  <script src="https://www.rgraph.net/libraries/src/RGraph.common.core.js"></script>
+  <script src="https://www.rgraph.net/libraries/src/RGraph.common.dynamic.js"></script>
+  <script src="https://www.rgraph.net/libraries/src/RGraph.gauge.js"></script>
+  <!-- <script src="js/ForgeTree.js"></script> -->
   <script src="js/ForgeViewer.js"></script>
+
 </head>
 
 <body>
@@ -35,22 +39,16 @@
   <!-- End of navbar -->
   <div class="container-fluid fill">
     <div class="row fill">
-      <div class="col-sm-4 fill">
-        <div class="panel panel-default fill">
-          <div class="panel-heading" data-toggle="tooltip">
-            Buckets &amp; Objects
-            <span id="refreshBuckets" class="glyphicon glyphicon-refresh" style="cursor: pointer"></span>
-            <button class="btn btn-xs btn-info" style="float: right" id="showFormCreateBucket" data-toggle="modal" data-target="#createBucketModal">
-              <span class="glyphicon glyphicon-folder-close"></span> New bucket
-            </button>
-          </div>
-          <div id="appBuckets">
-            tree here
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-8 fill">
+      <div class="col-sm-6 fill">
         <div id="forgeViewer"></div>
+      </div>
+      <div class="col-sm-6 fill">
+        <canvas id="cvs" width="300" height="150">
+          [No canvas support]
+        </canvas>
+        <canvas id="cvs2" width="300" height="150">
+          [No canvas support]
+        </canvas>
       </div>
     </div>
   </div>
@@ -68,7 +66,7 @@
           <h4 class="modal-title" id="myModalLabel">Create new bucket</h4>
         </div>
         <div class="modal-body">
-          <input type="text" id="newBucketKey" class="form-control"> For demonstration purpouses, objects (files) 
+          <input type="text" id="newBucketKey" class="form-control"> For demonstration purposes, objects (files) 
           are NOT automatically translated. After you upload, right click on
           the object and select "Translate".
         </div>
