--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
   <link href="css/main.css" rel="stylesheet" />
   <script src="https://www.rgraph.net/libraries/src/RGraph.common.core.js"></script>
   <script src="https://www.rgraph.net/libraries/src/RGraph.common.dynamic.js"></script>
-  <script src="https://www.rgraph.net/libraries/src/RGraph.gauge.js"></script>
+  <script src="https://www.rgraph.net/libraries/src/RGraph.meter.js"></script>
   <!-- <script src="js/ForgeTree.js"></script> -->
   <script src="js/ForgeViewer.js"></script>
 
@@ -43,12 +43,9 @@
         <div id="forgeViewer"></div>
       </div>
       <div class="col-sm-6 fill">
-        <canvas id="cvs" width="300" height="150">
+        <canvas id="cvs" width="600" height="250" style="border-radius: 15px">
           [No canvas support]
-        </canvas>
-        <canvas id="cvs2" width="300" height="150">
-          [No canvas support]
-        </canvas>
+      </canvas>
       </div>
     </div>
   </div>
